syntax = "proto3";
package com.linkedout.proto.services;

import "models/notification.proto";

// Send a notification to a user
message SendNotificationToRequest {
  string user_id = 1;
  string title = 2;
  string content = 3;
}

// Get all notifications of a user
message GetUserNotificationsRequest {
  string user_id = 1;
}

message GetUserNotificationsResponse {
  repeated models.Notification notifications = 1;
}
